* New:  - Importing. Added Banking.Import.Parser, Import and SaveImport actions in OperationController, ImportOperations view, and actions in binding.js  - UpdateEntities function in binding.js (used in Save and SaveImport actions) * Fixed:  - Backup file conflict on multiple delete (wrapped in try-catch)  - Smaller font size (credit to TNK2005)  - Tablesorter arrows fix (credit to TNK2005)  - Tablesorter update fix (credit to TNK2005)  - GetTitle() method logic moved from Helper to ViewOperationTitle view

--- a/Banking/Banking.Web/Content/styles/main.css
+++ b/Banking/Banking.Web/Content/styles/main.css
@@ -140,7 +140,7 @@ menu li:before {
 .tableView td {
 	padding-bottom: 3px;
 	border-bottom: 2px dotted #222;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	vertical-align: middle;
 }
 .tableView .operationPersons li, .tableView .personDeals li {
